Add junit and jupiter test libraries to pom.xml